noinst_PROGRAMS = send httphash conn-async register-sync register-async remind-sync remind-async status status2
LDADD = ../src/libgadu.la

register_sync_SOURCES = register.c

register_async_SOURCES = register.c
register_async_CFLAGS = -DASYNC

remind_sync_SOURCES = register.c

remind_async_SOURCES = register.c
remind_async_CFLAGS = -DASYNC

